# PCCEntropy

./: .gitignore  .local_env.ps1  README.md  explore.ipynb  main.py  pyproject.toml
notebooks/: analysis.ipynb
src/: main.py
src/models/: corrector.py  encoder.py  encoding.py
src/models/base/: lightgbm_model.py
src/output/: base_result.json  corrective_result.json  entropy_lgbm_model.pkl  ground_truth_probs.npy  oof_probs.npy  platt_scaled_probs.npy  temp_scaled_probs.npy
src/scripts/: create_vectorstore.py  load_and_process_data.py  run_counterfactual_corrector.py  train_and_evaluate_base_model.py
src/services/: vectorstore.py
src/utils/: analysis.py  builder.py  enums.py  loader.py
