[project]
name = "pccentropy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
